--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,167 @@
-.App {
+html,
+body {
+  align-items: center;
+  background-color: #f8f8f8 !important;
+  color: #333;
+  display: flex;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-size: 1.3em;
+  justify-content: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  height: 100vh;
+  transition: all 0.3s ease-in-out;
+  width: 100vw;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.widget {
+  border-radius: 2.5rem;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.16), 0 3px 5px rgba(0, 0, 0, 0.23);
+  margin: 5rem 0;
+  padding: 3rem 5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inline-input {
+  align-items: flex-start;
+  border-bottom: 1px dotted #fff;
+  display: flex;
+  margin: 0.5rem 0 1.5rem 0;
+  background-color: #ffffff33;
+  border-radius: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.inline-input:focus-within {
+  border-bottom: 1px dotted #333;
+  transition: all 0.3s ease-in-out;
+}
+
+.inline-input .mdi {
+  color: #fff;
+  padding: 0.2rem 0.5rem 0 0;
+}
+
+.location-input {
+  display: flex;
+  align-items: flex-start;
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  font-size: 1.5rem;
+  max-width: 16rem;
+  outline: none;
+  padding-bottom: 0.3rem;
+}
+
+.main-display {
+  align-items: flex-start;
+  display: flex;
+  justify-content: start;
+  margin: 0.5rem 0 0.5rem 0;
+}
+
+.main-info {
+  align-items: flex-start;
+  display: flex;
+  justify-content: start;
+  order: 0;
+}
+
+.temp-measurement {
+  color: #333;
+  font-size: 5rem;
+  font-weight: 500;
+  line-height: 0.85;
+}
+
+.temp-unit {
+  vertical-align: top;
+}
+
+.sub-info {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: flex-start;
+  margin: 0 0 0 0.8rem;
+  order: 1;
+}
+
+.sub-info-title {
+  font-size: 1.15rem;
+  margin: 0 0 0.3rem 0;
+  text-align: start;
+}
+
+.sub-info-text {
+  font-size: 0.7rem;
+  color: #333;
+  margin: 0 0 0.4rem 0;
+  text-align: start;
+}
+
+.sub-info-text .max-temp {
+  /*     font-weight: 700; */
+  margin: 0 0.5rem 0 -0.1rem;
+}
+
+.selection-panel {
+  margin: 1.8rem 0 1.8rem -0.6rem;
+}
+
+.selection-row {
+  cursor: pointer;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 0.2rem 0 0 0;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.selection-days {
+  color: #333;
+  font-size: 0.7rem;
+  font-weight: 700;
+  width: 3.5rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selection-weather {
+  color: #333;
+  font-size: 0.7rem;
+  width: 3.5rem;
+}
+
+.selection-icons {
+  color: #333;
+  font-size: 1.7rem;
+  width: 3.5rem;
+}
+
+.selected {
+  color: #fff;
+  transition: all 0.3s ease-in-out;
+}
+
+.cloudy {
+  background-image: url(https://images.unsplash.com/photo-1483702721041-b23de737a886?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1473&q=80);
+}
+
+.clear {
+  background-image: url(https://images.unsplash.com/photo-1617142020713-52989920e411?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+}
+
+.snow {
+  background-image: url(https://images.unsplash.com/photo-1547754980-3df97fed72a8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+}
+
+.rain {
+  background-image: url(https://cdn.pixabay.com/photo/2014/04/05/11/39/rain-316579_1280.jpg);
+}
+
+.thunderstorm {
+  background-image: url(https://images.unsplash.com/photo-1602088501827-7912e1b4a7bd?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=627&q=80);
 }
